Fix footer center alignment issues

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -9,24 +9,21 @@ body > footer {
   font-size: small;
   & > * {
     margin: 0;
-    line-height: $base-unit;
+    line-height: 1rem;//$base-unit;
     text-align: center;
   }
   nav {
     color: $color-link;
-
     display: flex;
     justify-content: center;
     margin-bottom: $base-unit-small/2;
     a {
       display: block;
-      padding: 0 0 0 $base-unit;
-      //line-height: $base-unit * 1.5;
-    }
-    a:not(:last-child)::after {
+      padding: 0 $base-unit;
       border-right: 1px solid $color-divider;
-      padding-right: $base-unit;
-      content: '';
+    }
+    a:last-child {
+      border: none;
     }
     a:link, a:visited {
       color: $color-link;
@@ -52,7 +49,6 @@ body > footer {
     }
   }
   p {
-    //line-height: $base-unit * 1.5;
     margin-bottom: 2*$base-unit-small;
     span {
       font-family: $font-family-header;
@@ -64,30 +60,30 @@ body > footer {
   body > footer {
     padding: 2*$base-unit 0;
     display: grid;
-    grid-template-columns: 1fr 3rem 1fr;
+    grid-template-columns: 1fr minmax(0, 20rem) 3rem minmax(0, 20rem) 1fr;
     grid-auto-flow: row;
     grid-column-gap: 1rem;
     nav {
+      grid-area: 1 / 2;
       display: block;
       text-align: right;
       margin: 0;
       a {
-        border: none;
         display: inline;
         padding: 0;
+        border: none;
       }
       a:not(:last-child)::after {
-        border: none;
         content: ',';
-        padding: 0;
       }
     }
     p {
+      grid-area: 1 / 4;
       text-align: left;
       margin: 0;
     }
     > a {
-      grid-area: 1 / 2;
+      grid-area: 1 / 3;
       height: 3rem;
       svg {
         height: 100%;
